添加缓存demo代码（待解决问题1个）

--- a/closureUse.html
+++ b/closureUse.html
@@ -12,7 +12,7 @@
         <h3>闭包使用场景</h3>
 
         <script>
-          // 1.1.使用闭包可以再JavaScript中模拟块级作用域（JavaScript本身没有块级作用域的概念）
+          // 1.1.使用闭包可以再JavaScript中模拟块级作用域（ECMAscript 6之前的JavaScript本身没有块级作用域的概念）
           function outputNumbers(count){
             (function(){
               for(var i = 0; i < count; i++){
