--- a/prototype.html
+++ b/prototype.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "
+http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "
+http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "
+http://www.w3.org/TR/html4/frameset.dtd"> -->
 <html>
     <head>
-      <meta charset="utf-8">
+      <meta name="renderer" content="webkit">
+      <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1 charset='utf-8'"/>
+      <!-- <meta charset="utf-8"> -->
       <title>
           原型理解
       </title>
