1.更新（优化）旧代码； 2.添加 随机数组代码；

--- a/others/mditorDemo.html
+++ b/others/mditorDemo.html
@@ -14,7 +14,7 @@
       <h3>Mditor演示demo</h3>
       <textarea id="mditor_dom"></textarea>
 
-      <script type="text/javascript" src="../jquery-1.10.2.min.js"></script>
+      <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
       <script type="text/javascript" src="mditor.js"></script>
       <script>
 
