--- a/others/zxxAutoComplete.html
+++ b/others/zxxAutoComplete.html
@@ -15,7 +15,7 @@
     <body>
       <h3>邮箱自动下拉匹配列表</h3>
       <input type="email" class="input inputMailList" name="email" placeholder="请输入邮箱" required autofocus autocomplete="off">
-      <script type="text/javascript" src="../jquery-1.10.2.min.js"></script>
+      <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
       <script>
         // 加入插件代码
         (function($) {
