--- a/isTrusted.html
+++ b/isTrusted.html
@@ -5,7 +5,7 @@
     <!-- <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/> -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
     <title>测试用户点击和js点击</title>
-    <script src='jquery-1.10.2.min.js'></script>
+    <script src='lib/jquery-1.10.2.min.js'></script>
   </head>
   <body>
     <button id="btn">Click</button>
