--- a/timer(jq).html
+++ b/timer(jq).html
@@ -25,7 +25,7 @@
             我比较无聊， 尝试写一个简单的倒计时器
         </p>
 
-        <script src="jquery-1.10.2.min.js", type="text/javascript">
+        <script src="lib/jquery-1.10.2.min.js", type="text/javascript">
         </script>
 
         <script>
