--- a/prototype.html
+++ b/prototype.html
@@ -8,8 +8,8 @@ http://www.w3.org/TR/html4/frameset.dtd"> -->
 <html>
     <head>
       <meta name="renderer" content="webkit">
-      <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1 charset='utf-8'"/>
-      <!-- <meta charset="utf-8"> -->
+      <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
+      <meta charset="utf-8">
       <title>
           原型理解
       </title>
