--- a/array.html
+++ b/array.html
@@ -9,22 +9,10 @@ http://www.w3.org/TR/html4/strict.dtd">
       </title>
       <link rel="stylesheet" type="text/css" href="common.css"/>
       <style type="text/css">
-        .radio-list{
-          font-size: 16px;
-          text-align: left;
-        }
-        .radio-list input{
-          width: 16px;
-          height: 16px;
-          cursor: pointer;
-        }
-        .panel {
-          display: none;
-        }
-        .un-detail,.sort-detail, .random-detail {
-          display: none;
-          margin: 20px 0px;
-        }
+        .radio-list{ font-size: 16px;text-align: left; }
+        .radio-list input{ width: 16px;height: 16px;cursor: pointer; }
+        .panel { display: none; }
+        .un-detail, .sort-detail, .random-detail { display: none;margin: 20px 0px; }
       </style>
       <script src="syntax_highlighter/brush.js" type="text/javascript"></script>
       <link rel="stylesheet" type="text/css" href="syntax_highlighter/shCore.css" />
@@ -659,7 +647,7 @@ http://www.w3.org/TR/html4/strict.dtd">
 
         <script type="text/javascript" src="utils.js"></script>
         <script>
-          // 全局变量命名空间
+          // @global xq 全局变量命名空间
           var xq = {};
           // 测试以上函数 方便演示代码， 添加代码高亮插件
           xq.t_array = [4, 2, 5, 5, 8, 12, 43, 7, 2];
